// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Button renders an Button 1`] = `
<div>
  <button
    class="css-lnfplo"
    font-family="default"
    font-size="medium"
  >
    Click me!
  </button>
</div>
`;

exports[`components/Button renders an Button with variant prop 1`] = `
<div>
  <button
    class="css-91zwen"
    font-family="default"
    font-size="medium"
  >
    Click me!
  </button>
</div>
`;
